# sandbox

./: .gitignore  README.md
c/: heap_string.c  memcpy_test.c  newtonsMethod.c  p_find_largest.c  pointer2.c  pointer3.c  pointer_prac.c  pointers.c  problem1.cpp  problem2.cpp  scanf-test.c  sizeof.c  sum_2D_array.c  timeconvert-flight.c
c/threads/: dotprod_mutex.c  threadHello.c  thread_output.txt
cpp/: argc.cpp  colors.cpp  const_ref.cpp  factorial.cpp  logging.cpp  minimal_fileio.cpp  palindrome.cpp  prime.cpp  printthedigits.cpp  problem2.cpp  random_generator.cpp  scratch.cpp
cpp/color/: Makefile  colors.cpp  colors.h
cpp/cpp11_features/: accumulate.cpp  auto.cpp  auto.md  decltype_check.cpp  lambda_example.cpp  minimal_lambda.cpp  range_based_for.md  shared.cpp  syntax_check.cpp  timer_unique_ptr.cpp  unique_ptr.cpp
cpp/cpp20_features/: concepts.cpp
cpp/cpp_examples/: accumulate.cpp  const_capture_lambda.cpp  print.cpp  reverse_string.cpp  scratch.cpp  swap.cpp  templated_functions.cpp
cpp/cs104_examples/: accumulate.cpp  arrays.cpp  being_stupid_with_cpp_macros.cpp  cheatsheet.cpp  fileio_test.cpp  fpointers.cpp  getline_test.cpp  interpreter_design.md  lab_bst.cpp  lambdas.cpp  map_iterator.cpp  map_operator_brackets_side_effect.cpp  map_set_order.cpp  memcpytest.cpp  meta.cpp  minimal_lambda.cpp  mtr.cpp  namespaces.cpp  no_auto.cpp  ordered_map.cpp  permutations.cpp  pointer_arrays.cpp  polymorph.cpp  print_file.cpp  readlines.cpp  ref.cpp  reverse_ll.cpp  (+9 more)
golang/: golang-notes.md
ruby/: classes.rb
rust/so/: Cargo.toml
rust/so/src/: main.rs
(+213 files in other folders)
