[package]
name = "so"
version = "0.1.0"
authors = ["Cameron Durham <cdurham@usc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_urlencoded = "0.7"

# Optional deps...
## json
serde_json =  "1.0.59"
## multipart
mime_guess = { version = "2.0", default-features = false, optional = true }
